--- a/BUILD.gn
+++ b/BUILD.gn
@@ -125,6 +125,7 @@ group("flutter") {
 
     if (!is_win && !is_fuchsia) {
       public_deps += [
+        "//flutter/shell/platform/android:flutter_shell_native_unittests",
         "//flutter/shell/platform/android/external_view_embedder:android_external_view_embedder_unittests",
         "//flutter/shell/platform/android/jni:jni_unittests",
         "//flutter/shell/platform/android/platform_view_android_delegate:platform_view_android_delegate_unittests",
