--- a/shell/platform/android/BUILD.gn
+++ b/shell/platform/android/BUILD.gn
@@ -8,6 +8,7 @@ import("//flutter/common/config.gni")
 import("//flutter/shell/config.gni")
 import("//flutter/shell/gpu/gpu.gni")
 import("//flutter/shell/version/version.gni")
+import("//flutter/testing/testing.gni")
 
 shell_gpu_configuration("android_gpu_configuration") {
   enable_software = true
@@ -16,11 +17,53 @@ shell_gpu_configuration("android_gpu_configuration") {
   enable_metal = false
 }
 
+test_fixtures("flutter_shell_native_fixtures") {
+  fixtures = []
+}
+
+executable("flutter_shell_native_unittests") {
+  testonly = true
+
+  sources = [
+    "android_surface_gl_unittests.cc",
+  ]
+
+  deps = [
+    ":flutter_shell_native_sources",
+    ":flutter_shell_native_fixtures",
+    "//flutter/lib/ui",
+    "//flutter/shell/gpu:gpu_surface_gl",
+    "//flutter/shell/platform/android/jni:jni_mock",
+    "//flutter/shell/platform/android/surface",
+    "//flutter/testing",
+    "//flutter/testing:dart",
+    "//flutter/testing:skia",
+  ]
+}
+
+# This target can only be built on Android due to various dependencies on the
+# Android SDK. Avoid adding more to this target and add to smaller modular
+# targets that can be unit tested on host machines and with Android dependencies
+# mocked out.
 shared_library("flutter_shell_native") {
   visibility = [ ":*" ]
 
   output_name = "flutter"
 
+  deps = [
+    ":flutter_shell_native_sources",
+  ]
+
+  libs = [
+    "android",
+    "EGL",
+    "GLESv2",
+  ]
+
+  ldflags = [ "-Wl,--version-script=" + rebase_path("android_exports.lst") ]
+}
+
+source_set("flutter_shell_native_sources") {
   sources = [
     "$root_build_dir/flutter_icu/icudtl.o",
     "android_context_gl.cc",
@@ -85,14 +128,6 @@ shared_library("flutter_shell_native") {
 
     defines += [ "SHELL_ENABLE_VULKAN" ]
   }
-
-  libs = [
-    "android",
-    "EGL",
-    "GLESv2",
-  ]
-
-  ldflags = [ "-Wl,--version-script=" + rebase_path("android_exports.lst") ]
 }
 
 action("gen_android_build_config_java") {
